# glacier-home

./: .gitignore  CMakeLists.txt  README  README.md  glacier-home.pro  transifex.yml
.github/workflows/: build.yml  clang-format-check.yml
data/: 90-glacier-powerkey.conf  glacier-home.conf  lipstick.service
interfaces/: org.lipstick.polkitAuthAgent.xml
lib/search/: CMakeLists.txt  glaciersearchplugin.h  searchpluginmanager.cpp  searchpluginmanager.h
lib/search/plugins/: CMakeLists.txt
lib/search/plugins/application/: CMakeLists.txt  applicationsearchplugin.cpp  applicationsearchplugin.h
rpm/: glacier.desktop  glacier.service  lipstick-glacier-home-qt5.spec
settings-plugins/: CMakeLists.txt
settings-plugins/desktop/: CMakeLists.txt  desktop.qml  desktopsettingsplugin.cpp  desktopsettingsplugin.h
settings-plugins/desktop/translations/: desktop.ts  desktop_cs.ts  desktop_de.ts  desktop_es.ts  desktop_fi.ts  desktop_nl.ts  desktop_pl.ts  desktop_ru.ts  desktop_uk.ts
settings-plugins/wallpaper/: CMakeLists.txt  selectImage.qml  wallpaper.qml  wallpapersettingsplugin.cpp  wallpapersettingsplugin.h
settings-plugins/wallpaper/translations/: wallpaper.ts  wallpaper_cs.ts  wallpaper_de.ts  wallpaper_es.ts  wallpaper_fi.ts  wallpaper_nl.ts  wallpaper_pl.ts  wallpaper_ru.ts  wallpaper_uk.ts
src/: CMakeLists.txt  controlcenterbuttonsmodel.cpp  controlcenterbuttonsmodel.h  fileutils.cpp  fileutils.h  geoagent.cpp  geoagent.h  geoclueagent.cpp  geoclueagent.h  glacier_global.h  glacierauthenticationinput.cpp  glacierauthenticationinput.h  glacierwindowmodel.cpp  glacierwindowmodel.h  logging.cpp  logging.h  main.cpp  mceconnect.cpp  mceconnect.h  polkitagent.cpp  polkitagent.h  polkitinterface.cpp  polkitinterface.h  src.pro  welcome.cpp  welcome.h
src/audiocontrol/: audioroutemanager.cpp  audioroutemanager.h  audiorouteservice.cpp  audiorouteservice.h  org.nemomobile.Route.Manager.xml
src/bluetooth/: bluetoothagent.cpp  bluetoothagent.h
src/data/: 90-glacier-devlock.conf  glacier-home.privileges  lipstick.service
src/i18n/: glacer-home-cs.ts  glacer-home-nl.ts  glacer-home.ts
src/models/: controlcenterbuttonsmodel.cpp  glacierwindowmodel.cpp  glacierwindowmodel.h  searchmodel.cpp  searchmodel.h
src/plugin/: CMakeLists.txt  plugin.cpp  qmldir
src/qml/: AppLauncher.qml  AppSwitcher.qml  BatteryPanel.qml  CloseButton.qml  CommonPanel.qml  ControlCenter.qml  DeviceLock.qml  DeviceLockUI.qml  FeedsPage.qml  GlacierCompositor.qml  GlacierRotation.qml  LauncherItemDelegate.qml  LauncherItemFolder.qml  LauncherItemWrapper.qml  Lockscreen.qml  LockscreenClock.qml  LockscreenNotificationItem.qml  MainScreen.qml  Pager.qml  SearchListView.qml  SimPanel.qml  Statusbar.qml  StatusbarItem.qml  SwitcherItem.qml  ToolBarLayoutExample.qml  USBModeSelector.qml  VolumeControl.qml  Welcome.qml  WifiPanel.qml  compositor.qml  compositor_new.qml  glacier-home.qrc
src/qml/applauncher/: Deleter.qml  FolderView.qml  LauncherItemDelegate.qml  LauncherItemFolder.qml  LauncherItemWrapper.qml  SearchListView.qml
src/qml/appswitcher/: CloseButton.qml  SwitcherItem.qml
src/qml/compositor/: ScreenGestureArea.qml  WindowWrapperAlpha.qml  WindowWrapperBase.qml  WindowWrapperMystic.qml
src/qml/connectivity/: USBModeSelector.qml
src/qml/controlcenter/: BluetoothButton.qml  CellularDataControlButton.qml  ControlButton.qml  LocationControlButton.qml  NetworkControlButton.qml  QuietControlButton.qml
src/qml/dialogs/: BtObexRequestConfirmationDialog.qml  BtRequestConfirmationDialog.qml  RebootDialog.qml  UsbModeDialog.qml
src/qml/feedspage/: BluetoothButton.qml  BluetoothControlButton.qml  CellularDataControlButton.qml  ControlButton.qml  ControlCenter.qml  LocationControlButton.qml  NetworkControlButton.qml  QuietControlButton.qml  WiFiButton.qml  WiFiControlButton.qml
src/qml/lockscreen/: AngleAnimation.qml  DeviceLockUI.qml  LockScreenIndicators.qml  LockscreenClock.qml  LockscreenNotificationItem.qml  MediaControls.qml  NumPadButton.qml  OperatorLine.qml
src/qml/mainscreen/: GlacierRotation.qml  Pager.qml  Wallpaper.qml
src/qml/notifications/: NofiticationImage.js  NotificationItem.qml  NotificationPreview.qml
src/qml/scripts/: desktop.js  fontawesome.js  ionicons.js
src/qml/statusbar/: BatteryIndicator.qml  BatteryPanel.qml  BluetoothIndicator.qml  ColoredIconEffect.qml  CommonPanel.qml  DataStatusItem.qml  DeveloperModeIndicator.qml  LocationIndicator.qml  MediaController.qml  NfcIndicator.qml  NumButton.qml  PowerSaveModeIndicator.qml  SimIndicator.qml  SimPanel.qml  StatusbarItem.qml  USBModeIndicator.qml  UsbModeIndicator.qml  WifiIndicator.qml  WifiPanel.qml
src/qml/system/: GeoClue2Agent.qml  Screenshot.qml  ShutdownScreen.qml
src/qml/volumecontrol/: AudioWarningDialog.qml  VolumeControl.qml
src/qml/welcome/: SayMeHello.qml  SelectLang.qml  WelcomePage.qml
src/resourcecontrol/: org.maemo.resource.manager.xml  resourcecontrolmanager.cpp  resourcecontrolmanager.h  resourcecontrolservice.cpp  resourcecontrolservice.h
src/settings-plugins/desktop/: desktop.json  desktop.qml
src/settings-plugins/notifications/: notifications.json  notifications.qml
src/settings-plugins/wallpaper/: selectImage.qml  wallpaper.json  wallpaper.qml
src/widgets/: swipewavewidget.cpp  swipewavewidget.h
tests/: CMakeLists.txt
tests/lockscreen_preview/: CMakeLists.txt  LocscreenTestWindow.qml  main.cpp
tests/stubs/: lipsticksettings_stub.cpp  lipsticksettings_stub.h  wallclock_stub.cpp  wallclock_stub.h
translations/: glaceir-home_ru.ts  glacer-home.ts  glacer-home_cs.ts  glacer-home_nl.ts  glacer-home_ru.ts  glacier-home.ts  glacier-home_cs.ts  glacier-home_de.ts  glacier-home_es.ts  glacier-home_fi.ts  glacier-home_fi_FI.ts  glacier-home_nl.ts  glacier-home_pl.ts  glacier-home_ru.ts  glacier-home_uk.ts
